Fixed display overflow

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,8 @@ button {
     text-align: end;
     font-size: 3rem;
     height: 4rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .input {
